--- a/index.html
+++ b/index.html
@@ -15,10 +15,68 @@
         <div class="container"><img src="./assets/FONTS.gif" alt="" class="heading"></div>
     </div>
     <div class="section" id="about">
-        <h2 class="text" id="about-sub">[About the Concert]</h2>
-        <h1 class="text" id="lamba">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto quo ducimus consequuntur et ratione excepturi temporibus. Debitis nesciunt eius, quibusdam velit perferendis inventore dolores voluptate rem veniam suscipit quos dolorem qui deleniti? Impedit id totam explicabo. Atque aliquid rem aspernatur illum ducimus itaque quod nisi.</h1>
+
+        <h1 class="text" id="lamba">Get ready, India! Travis Scott's Circus Maximus is coming to revolutionize your concert experience. Prepare for a night where groundbreaking visuals meet unparalleled sound, transforming the ordinary into the extraordinary. This isn't just a concert; it's a journey into the heart of La Flame's universe, an immersive spectacle designed to ignite your senses and leave you breathless.</h1>
+    </div>
+    <div class="section" id="event">
+        <div class="timeline-container">
+        <!-- Event 1 -->
+        <div class="timeline-event">
+            <div class="timeline-content">
+                <h3>7:00 PM</h3>
+                <img src="./assets/door.webp" alt="">
+                <h2>Doors Open</h2>
+
+            </div>
+        </div>
+
+        <!-- Event 2 -->
+        <div class="timeline-event">
+            <div class="timeline-content">
+                <h3>8:00 PM</h3>
+                <img src="./assets/special.webp" alt="">
+                <h2>Special Guest Set</h2>
+
+            </div>
+        </div>
+
+        <!-- Event 3 -->
+        <div class="timeline-event">
+            <div class="timeline-content">
+                <h3>9:00 PM</h3>
+                <img src="./assets/travis.webp" alt="">
+                <h2>Travis Scott Live</h2>
+
+            </div>
+        </div>
+
+        <!-- Event 4 -->
+        <div class="timeline-event">
+            <div class="timeline-content">
+                <h3>10:30 PM</h3>
+                <img src="./assets/encore.jpg" alt="">
+                <h2>Encore</h2>
+
+            </div>
+        </div>
+
+        <!-- Event 5 -->
+        <div class="timeline-event">
+            <div class="timeline-content">
+                <h3>11:00 PM</h3>
+                <img src="./assets/ending.jpg" alt="">
+                <h2>Show Ends</h2>
+
+            </div>
+        </div>
+    </div>
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.8/dist/lenis.min.js"></script> 
     <script src="script/script.js"></script>
 </body>
